# shanhaijing

./: LICENSE  README.md  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md  PRINCIPLES.md  ROADMAP.md  v0.6-memory.md  v0.7-polish.md  v1.0-release-notes.md  v1.0.1-onboarding.md
docs/research/: claw-mart.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: MessageBubble.tsx  SearchModal.tsx
src/components/layout/: AgentRail.tsx  ChatPane.tsx  ConversationList.tsx
src/components/settings/: AgentsPanel.tsx  CardsPanel.tsx  MemoriesPanel.tsx  PersonasPanel.tsx  ProvidersPanel.tsx  SkillsPanel.tsx
src/components/ui/: Button.tsx  Field.tsx  Input.tsx  Modal.tsx
src/db/: index.ts
src/db/migrations/: 0001_init.sql
src/features/: bootstrap.ts  chat.ts  exportConversation.ts  groupChat.ts  promptDebug.ts  seedTemplates.ts  send.ts  summarize.ts
src/lib/: crypto.ts  i18n.ts  mentions.ts  png.ts  variants.ts
src/llm/: openai.ts  prompt.ts
src/repos/: agents.ts  cards.ts  conversations.ts  folders.ts  memories.ts  messages.ts  personas.ts  providers.ts  skills.ts
src/stores/: data.ts  ui.ts
src/types/: domain.ts
