[package]
name = "shanhaijing"
version = "1.0.0"
description = "Shanhaijing — agents as friends, in the open."
authors = ["JoursBleu"]
edition = "2021"

[lib]
name = "shanhaijing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
